--- a/matchup-web/src/App.css
+++ b/matchup-web/src/App.css
@@ -1,4 +1,6 @@
 .page-container {
     margin: 1rem;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    height: 100%;
 }
