--- a/matchup-web/src/assets/global.css
+++ b/matchup-web/src/assets/global.css
@@ -5,12 +5,17 @@
 }
 
 body {
-    margin: 0;
+    min-height: 100vh;
+    max-width: 100vw;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+    height: 100%;
 }
 
 code {
