--- a/matchup-web/src/pages/Account/Account.css
+++ b/matchup-web/src/pages/Account/Account.css
@@ -1,41 +1,70 @@
-.instructions {
+.account-container {
+    width: 100%;
+    max-width: 420px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.signup-form>h1 {
+    text-align: center;
+}
+
+form.account-form {
+    width: 100%;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.account-form>button {
+    padding: 0.5rem;
+    border: 0;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+}
+
+.form-input-area {
+    width: 100%;
+}
+
+.form-input-area>* {
+    width: 100%;
+    font-size: 1rem;
+}
+
+.form-input-area>label {
+    display: flex;
+    margin-bottom: 0.5rem;
+}
+
+.form-input-area>input {
+    border: 0;
+    height: 25px;
+    border-radius: 0.5rem;
+    padding-left: 0.5rem;
+}
+
+div.instructions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     font-size: 0.75rem;
     border-radius: 0.5rem;
     background: #000;
     color: #fff;
     padding: 0.25rem;
-    position: relative;
-    bottom: -10px;
+    margin-top: 0.5rem;
 }
 
 .instructions>svg {
     margin-right: 0.25rem;
 }
 
-
 .hide {
     display: none;
 }
-
-/*
-.valid {
-    color: limegreen;
-    margin-left: 0.25rem;
-}
-
-.invalid {
-    color: red;
-    margin-left: 0.25rem;
-}
-
-.errmsg {
-    background-color: lightpink;
-    color: firebrick;
-    font-weight: bold;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.line {
-    display: inline-block;
-} */
