Introduced tailwind to the project and started profile flyout

--- a/matchup-web/src/assets/global.css
+++ b/matchup-web/src/assets/global.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -21,4 +25,8 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
+}
+
+#root {
+    height: 100vh;
 }
