--- a/matchup-web/src/layouts/PageHeader/PageHeader.css
+++ b/matchup-web/src/layouts/PageHeader/PageHeader.css
@@ -1,4 +1,9 @@
-.navbar {
+.site-title {
+    font-size: 2rem;
+}
+
+/*
+.pageheader {
     background-color: #182734;
     color: white;
     display: flex;
@@ -8,11 +13,7 @@
     padding: 0 1rem;
 }
 
-.site-title {
-    font-size: 2rem;
-}
-
-.navbar a {
+.pageheader a {
     color: inherit;
     text-decoration: none;
     height: 100%;
@@ -21,7 +22,7 @@
     padding: .25rem;
 }
 
-.navbar ul {
+.pageheader ul {
     padding: 0;
     margin: 0;
     list-style: none;
@@ -29,10 +30,10 @@
     gap: 1rem;
 }
 
-.navbar li.active {
+.pageheader li.active {
     background-color: #304e69;
 }
 
-.navbar li:hover {
+.pageheader li:hover {
     background-color: #40698c;
-}
+} */
