--- a/matchup-web/src/pages/Login/Login.css
+++ b/matchup-web/src/pages/Login/Login.css
@@ -8,11 +8,7 @@
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.signup-form>h1 {
-    text-align: center;
-}
-
-.signin-form>h1 {
+.login-form>h1 {
     text-align: center;
 }
 
