--- a/matchup-web/src/pages/Login/NewLogin.css
+++ b/matchup-web/src/pages/Login/NewLogin.css
@@ -211,9 +211,8 @@ h6 span {
 
 .input-icon {
     position: absolute;
-    top: 0;
+    top: 12px;
     left: 18px;
-    height: 48px;
     font-size: 24px;
     line-height: 48px;
     text-align: left;
