--- a/matchup-web/src/pages/Login/NewLogin.css
+++ b/matchup-web/src/pages/Login/NewLogin.css
@@ -196,7 +196,6 @@ h6 span {
     outline: none;
     color: #c4c3ca;
     background-color: #1f2029;
-    border: none;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
     box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
@@ -204,7 +203,6 @@ h6 span {
 
 .form-style:focus,
 .form-style:active {
-    border: none;
     outline: none;
     box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
 }
@@ -324,4 +322,38 @@ h6 span {
 
 .logo b span {
     color: #d608ae;
+}
+
+.error-message {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.error-message p {
+    color: #ff4d4d;
+    font-size: 12px;
+    font-weight: 500;
+    margin: 0;
+}
+
+.popdown-text {
+    position: absolute;
+    bottom: -50px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    background-color: #2a2b38;
+    border-radius: 6px;
+    color: #c4c3ca;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 10px 0;
+    border: 1px solid #ff4d4d;
+}
+
+.popdown-text p {
+    margin: 0;
 }
