--- a/matchup-web/src/pages/Login/NewLogin.css
+++ b/matchup-web/src/pages/Login/NewLogin.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
+#login-page {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 1.7;
+    color: #c4c3ca;
+    background-color: #1f2029;
+    overflow-x: hidden;
+}
+
 #signup-side-panel {
     flex-direction: column;
     align-items: center;
@@ -16,14 +26,18 @@
     color: #fff;
 }
 
-#login-page {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 1.7;
-    color: #c4c3ca;
-    background-color: #1f2029;
-    overflow-x: hidden;
+.side-panel-content {
+    animation: fadeInto 0.5s ease-in-out;
+}
+
+@keyframes fadeInto {
+    0% {
+        opacity: 0.3;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 a {
