--- a/matchup-web/src/pages/Login/Login.css
+++ b/matchup-web/src/pages/Login/Login.css
@@ -1,85 +1,128 @@
-.login-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 100vh;
-    width: 100%;
-}
+/* Reset styles */
 
-.login-side-panel {
+/* Global styles */
+
+.global__flex-center-row {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    background: #3F72AF;
-    color: #fff;
-}
-
-.login-form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.login-form>h2 {
-    text-align: center;
-}
-
-form.account-form {
-    width: 100%;
-    min-height: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.account-form>button {
-    padding: 0.5rem;
-    border: 0;
-    border-radius: 0.5rem;
-    font-size: 1rem;
-}
-
-.form-input-area {
-    width: 100%;
-}
-
-.form-input-area>* {
-    width: 100%;
-    font-size: 1rem;
-}
-
-.form-input-area>label {
-    display: flex;
-    margin-bottom: 0.5rem;
-}
-
-.login-form .form-input-area>input {
-    border: 0;
-    height: 25px;
-    border-radius: 0.5rem;
-    padding-left: 0.5rem;
-    background-color: var(--input-bg)
-}
-
-div.instructions {
-    display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 0.75rem;
-    border-radius: 0.5rem;
-    background: #000;
+}
+
+.global__flex-between-row {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+}
+
+/* Login styles */
+
+.page-login {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+}
+
+.page-login__left {
+    flex: 1;
+    background-color: #3F72AF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-login-left__title {
+    margin: 0;
+    font-size: 30px;
+    font-weight: 500;
     color: #fff;
-    padding: 0.25rem;
-    margin-top: 0.5rem;
+    margin-top: 50px;
 }
 
-.instructions>svg {
-    margin-right: 0.25rem;
+.page-login-left__text {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 300;
+    color: #fff;
 }
 
-.hide {
-    display: none;
+.page-login__right {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-login-right__title {
+    margin: 0;
+    font-size: 48px;
+    font-weight: 600;
+    color: #000022;
+    line-height: normal;
+    text-align: start;
+    width: 70%;
+    margin-bottom: 50px;
+}
+
+.page-login-right__input {
+    width: 70%;
+    margin-bottom: 30px;
+}
+
+.page-login-right-input__title {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 500;
+    color: #000022;
+    text-align: start;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.page-login-right-input__input {
+    width: 100%;
+    height: 50px;
+    background-color: #F4F2F2;
+    border-radius: 6px;
+    padding: 5px 10px;
+}
+
+.page-login-right__button {
+    width: 70%;
+    height: 50px;
+    background-color: #3F72AF;
+    border-radius: 10px;
+    box-shadow: 1px 4px 10px 0px #1f62ff43;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-login-right-button__text {
+    margin: 0;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    line-height: normal;
+}
+
+.page-login-right__noaccount {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 500;
+    color: #000022ca;
+    letter-spacing: 1px;
+    margin-top: 10px;
+}
+
+.page-login-right-noaccount__link {
+    font-weight: 600;
+    color: #3F72AF;
 }
