--- a/matchup-web/src/pages/UserHome/UserHome.css
+++ b/matchup-web/src/pages/UserHome/UserHome.css
@@ -1,315 +1,144 @@
-:root {
-    --header-size: 58px;
-}
-
-/* Style for the sections */
-section {
-    text-align: center;
-}
-
-.user-home {
-    height: 100vh;
-    position: relative;
-}
-
-/* home section */
-section#home {
-    position: relative;
+.dashboard {
+    background-color: white;
+    width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+/*  */
+
+.dashboard-leftside {
+    background-color: #F5F6FA;
+    width: 300px;
+    height: 100%;
+    display: flex;
     flex-direction: column;
-    overflow: hidden;
+    align-items: start;
+    margin: 0;
+    padding-top: 30px;
 }
 
-.home-background {
-    position: absolute;
-    top: -10px;
-    left: -10px;
-    right: -10px;
-    bottom: -10px;
-    background-image: url('header_image.jpg');
-    background-size: cover;
-    background-position: center;
-    filter: blur(5px);
-    -webkit-filter: blur(5px);
-    z-index: -1;
-    pointer-events: none;
-}
-
-.home-title {
-    font-size: 90px;
-    color: #3e74b4;
-    margin: 0%;
-    text-shadow: 1px 1px 2px #333;
-}
-
-.home-subtitle {
-    color: #fff;
-    text-shadow: 1px 1px 2px #333;
-}
-
-.home-img {
-    height: 30%;
-    width: auto;
-    text-shadow: 1px 1px 2px #333;
-}
-
-/* solution section */
-
-#solution {
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-}
-
-.solution-div {
-    position: relative;
-    padding: 200px 100px;
+.dashboard-leftside_top {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    max-width: 1500px;
+    align-items: center;
+    margin-bottom: 100px;
 }
 
-.solution-image {
-    width: 40%;
-    margin: 0px 50px;
+.dashboard-leftside-top_image {
+    height: 75px;
+    width: 75px;
+    margin-left: 30px;
 }
 
-.solution-textdiv {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    width: 50%;
-    margin: 0px 10px;
-}
-
-.solution-textdiv-title {
-    text-align: start;
+.dashboard-leftside-top_title {
     margin: 0;
-    color: #333;
-    font-size: 50px;
-    margin-bottom: 10px;
+    color: black;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+    line-height: normal;
+    margin-left: 10px;
 }
 
-.solution-textdiv-div {
-    height: 100px;
+.dashboard-leftside_content {
+    width: 100%;
+}
+
+.dashboard-leftside-content_navbutton {
     display: flex;
-
-    margin-bottom: 30px;
+    align-items: center;
+    width: 70%;
+    padding-left: 30px;
+    margin-bottom: 40px;
 }
 
-.solution-textdiv-div-img {
-    height: 50%;
+.dashboard-leftside-content-navbutton_image {
+    margin-right: 20px;
+}
+
+.dashboard-leftside-content-navbutton_text {
+    margin: 0;
+    color: #000000;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    line-height: normal;
+}
+
+.dashboard-leftside_bottom {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: auto;
+    margin-bottom: 50px;
+    width: 100%;
+}
+
+.dashboard-leftside-bottom_image {
+    margin-right: 15px;
+}
+
+.dashboard-leftside-bottom_text {
+    margin: 0;
+    color: #AAB2C8;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+    line-height: normal;
+    margin-bottom: 1px;
+}
+
+/*  */
+
+.dashboard-rightside {
+    width: 100%;
+    margin: 0;
+}
+
+.dashboard-rightside_header {
+    height: 70px;
+    display: flex;
+    align-items: center;
+    padding: 0px 30px;
+}
+
+.dashboard-rightside-header_input {
+    position: relative;
+    height: 50px;
+    width: 60%;
+    display: flex;
+}
+
+.dashboard-rightside-header-input_logo {
+    position: absolute;
+    height: 16px;
+    width: 16px;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+}
+
+.dashboard-rightside-header-input_input {
+    width: 100%;
+    background-color: #F5F6FA;
+    border-radius: 10px;
+    color: #AAB2C8;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 0px 20px 0px 50px;
+}
+
+.dashboard-rightside-header_picture {
+    height: 36px;
+    width: 36px;
+    margin-left: auto;
     margin-right: 10px;
 }
 
-.solution-textdiv-div-subtitle {
-    text-align: start;
-    margin: 0;
-    color: #3e74b4;
-    font-size: 40px;
-    max-width: 600px;
+.dashboard-rightside-header_button {
+    height: 25px;
 }
 
-.solution-textdiv-content {
-    text-align: start;
-    margin: 0;
-    color: #333;
-    font-size: 25px;
-    font-weight: 100;
-    line-height: 1.4;
-    width: 90%;
-    margin-bottom: 15px;
-}
-
-
-/* teams */
-
-#team {
-    position: relative;
-    padding: 50px 0px;
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    overflow: hidden;
-}
-
-.team-h1 {
-    color: #fff;
-    font-size: 50px;
-    text-shadow: 1px 1px 2px #333;
-}
-
-.team-background {
-    position: absolute;
-    top: -300px;
-    left: -10px;
-    height: 200%;
-    width: 100%;
-    background-image: url('team_image.jpg');
-    background-size: cover;
-    background-position: center;
-    filter: blur(5px);
-    -webkit-filter: blur(5px);
-    z-index: -1;
-    pointer-events: none;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-.matchup-profiles {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-    padding: 20px;
-}
-
-.matchup-profile {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    gap: 10px;
-    width: 300px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.matchup-profile img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin: 10px 0;
-}
-
-.name-role {
-    text-align: center;
-    width: 100%;
-    overflow: auto;
-    text-align: center;
-}
-
-.name-role h3 {
-    margin: 0;
-    padding: 0;
-}
-
-#contact {
-    background-color: #333;
-}
-
-.contact-footer {
-    color: #fff;
-    padding: 20px;
-    margin: 0px;
-}
-
-.contact-container {
-    text-align: start;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    padding: 0;
-    margin: 25px;
-}
-
-.contact-divider {
-    width: 2px;
-    height: 10ch;
-    background-color: #fff;
-}
-
-.socials-contact {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.socials-contact a {
-    display: grid;
-    grid-template-columns: 25px 1fr;
-    align-items: center;
-    gap: 10px;
-    color: #fff;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.socials-contact a svg {
-    font-size: 25px;
-}
-
-.socials-contact a:hover {
-    color: #279eff;
-}
-
-.logo-n-legal {
-    padding: 10px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-}
-
-.logo-n-legal img {
-    max-width: 75px;
-    height: auto;
-    filter: brightness(0) invert(1);
-}
-
-@media screen and (max-width: 1100px) {
-    ul.timeline {
-        width: 800px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-
-    /* Place the timelime to the left */
-    ul.timeline::before {
-        left: 31px;
-    }
-
-    /* Full-width containers */
-    li.timeline-item {
-        width: 100%;
-        padding-left: 70px;
-        padding-right: 25px;
-    }
-
-    /* Make sure that all arrows are pointing leftwards */
-    li.timeline-item::before {
-        left: 60px;
-        border: medium solid white;
-        border-width: 10px 10px 10px 0;
-        border-color: transparent white transparent transparent;
-    }
-
-    /* Make sure all circles are at the same spot */
-    .side-l::after,
-    .side-r::after {
-        left: 15px;
-    }
-
-    /* Make all right containers behave like the left ones */
-    .side-r {
-        left: 0%;
-    }
-
-    .side-l .item-header {
-        flex-direction: row;
-    }
-}
+/*  */
