--- a/matchup-web/src/pages/Signup/Signup.css
+++ b/matchup-web/src/pages/Signup/Signup.css
@@ -69,6 +69,14 @@
     margin-bottom: 50px;
 }
 
+.page-signup-right__form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .page-signup-right__input {
     width: 70%;
     margin-bottom: 30px;
