--- a/matchup-web/src/pages/UserHome/UserHome.css
+++ b/matchup-web/src/pages/UserHome/UserHome.css
@@ -48,18 +48,52 @@
 .dashboard-leftside-content_navbutton {
     display: flex;
     align-items: center;
-    width: 70%;
-    padding-left: 30px;
-    margin-bottom: 40px;
+    width: 100%;
+    margin-bottom: 20px;
+    gap: 15px;
+}
+
+.dashboard-leftside-content-navbutton__selector {
+    height: 50px;
+    width: 5px;
+    background-color: var(--primary);
+    border-radius: 0 3px 3px 0;
+    opacity: 0;
+}
+
+.dashboard-leftside-content-navbutton__content {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.dashboard-leftside-content_navbutton:hover {
+    cursor: pointer;
+}
+
+.dashboard-leftside-content_navbutton.navbutton-active .dashboard-leftside-content-navbutton__content {
+    background-color: var(--primary);
+    color: white;
+}
+
+.dashboard-leftside-content_navbutton.navbutton-active .dashboard-leftside-content-navbutton__selector {
+    opacity: 1;
+}
+
+.dashboard-leftside-content_navbutton.navbutton-active .dashboard-leftside-content-navbutton_image {
+    filter: invert(100%);
 }
 
 .dashboard-leftside-content-navbutton_image {
-    margin-right: 20px;
+    height: 30px;
+    width: 30px;
 }
 
 .dashboard-leftside-content-navbutton_text {
     margin: 0;
-    color: #000000;
     font-size: 16px;
     font-weight: 600;
     text-align: center;
