--- a/matchup-web/src/pages/UserHome/subpages/SubSports.css
+++ b/matchup-web/src/pages/UserHome/subpages/SubSports.css
@@ -118,3 +118,37 @@
 .join-up-button:hover {
     background-color: #2b4a8e;
 }
+
+.AllSportsPage-sport-page {
+    padding: 0 40px;
+    height: 88vh;
+    overflow-y: auto;
+}
+
+.AllSportsPage-sport-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.AllSportsPage-sport-page h2 {
+    margin: 0;
+    font-weight: bold;
+}
+
+.AllSportsPage-sport-create-button {
+    padding: 10px 20px;
+    background-color: #3F72AF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2em;
+}
+
+.AllSportsPage-sport-matches {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
