[ADD] Single sports page completed

--- a/matchup-web/src/pages/UserHome/subpages/SubSports.css
+++ b/matchup-web/src/pages/UserHome/subpages/SubSports.css
@@ -118,3 +118,73 @@
 .join-up-button:hover {
     background-color: #2b4a8e;
 }
+
+/* Subsports section */
+
+.sport-detail {
+    padding: 20px;
+}
+
+.back-button {
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.matchlist-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+.matchlistitem-container {
+    background: #fff;
+    /* border: 1px solid #ddd;
+    border-radius: 8px; */
+    overflow: hidden;
+    transition: transform 0.3s;
+}
+
+.matchlistitem-container:hover {
+    transform: scale(1.05);
+}
+
+.matchlistitem-header {
+    position: relative;
+    padding-top: 56.25%;
+    overflow: hidden;
+}
+
+.matchlistitem-header_image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.matchlistitem-content {
+    padding: 10px;
+}
+
+.matchlistitem-content-left_title {
+    font-size: 1.2em;
+    margin: 0;
+}
+
+.matchlistitem-content-left_location,
+.matchlistitem-content-right_date,
+.matchlistitem-content-right_users {
+    display: flex;
+    align-items: center;
+}
+
+.matchlistitem-content-left_location-image,
+.matchlistitem-content-right_users-image {
+    margin-right: 5px;
+}
+
+.matchlistitem-content-left_location-text,
+.matchlistitem-content-right_users-text {
+    margin: 0;
+}
