--- a/matchup-web/src/pages/UserHome/subpages/SubSports.css
+++ b/matchup-web/src/pages/UserHome/subpages/SubSports.css
@@ -137,6 +137,7 @@
     height: 70vh;
     overflow-y: auto;
     padding-top: 10px;
+    overflow-x: hidden;
 }
 
 .matchlistitem-container {
@@ -212,4 +213,66 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 1.2em;
+}
+
+/* Modal styles */
+.overlay {
+    background: rgba(0, 0, 0, 0.5);
+}
+  
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  outline: none;
+  width: 600px;
+  max-width: 100%;
+}
+
+.modal form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal label {
+  margin-bottom: 10px;
+}
+
+.modal input, .modal select {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  border-radius: 50%;
+}
+
+.submit-button {
+  background-color: #3F72AF;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.close-button {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.submit-button:hover, .close-button:hover {
+  opacity: 0.8;
 }
